--- a/docs/docs/11-面试题库/index.mdx
+++ b/docs/docs/11-面试题库/index.mdx
@@ -1,20 +1,229 @@
 ---
-sidebar_position: 1
-title: 11-面试题库
+sidebar_position: 11
+title: 面试题库
 ---
 
-# 11-面试题库
+# 面试题库
 
-本模块包含以下内容：
+欢迎来到面试题库！这里包含前端、后端、算法、系统设计等各类面试题和详细解答。
 
-## 学习内容
+## 📚 题库分类
 
-（待补充）
+### 前端面试题
+**包含内容**：
+- [JavaScript基础](./前端面试题/JavaScript基础.mdx) - 50+道JS基础题
+- React面试题 - React核心概念与原理
+- Vue面试题 - Vue响应式与组件通信
+- CSS面试题 - 布局、动画、响应式
+- 前端工程化 - Webpack、Vite、性能优化
 
-## 学习目标
+**难度分级**：
+- 🟢 简单：基础概念，必须掌握
+- 🟡 中等：常见面试题，重点准备
+- 🔴 困难：高级题目，加分项
 
-（待补充）
+[查看前端面试题 →](./前端面试题/)
 
-## 推荐学习路径
+---
 
-（待补充）
+### 后端面试题
+**包含内容**：
+- Node.js面试题 - 事件循环、异步编程
+- Java面试题 - JVM、并发、Spring
+- Python面试题 - 装饰器、生成器、协程
+- 数据库面试题 - MySQL、Redis优化
+
+[查看后端面试题 →](./后端面试题/)
+
+---
+
+### 算法面试题
+**包含内容**：
+- 数组与字符串 - 双指针、滑动窗口
+- 链表 - 反转、环检测、合并
+- 树与图 - 遍历、搜索、最短路径
+- 动态规划 - 背包、最长子序列
+
+**LeetCode题目**：
+- 简单：100+题
+- 中等：150+题
+- 困难：50+题
+
+[查看算法面试题 →](./算法面试题/)
+
+---
+
+### 系统设计面试题
+**包含内容**：
+- 系统设计基础 - CAP、一致性哈希
+- 高并发系统 - 秒杀、限流、降级
+- 分布式系统 - 分布式锁、事务
+- 经典设计题 - 短链接、推荐系统
+
+[查看系统设计面试题 →](./后端面试题/)
+
+---
+
+### 行为面试
+**包含内容**：
+- 自我介绍技巧
+- 项目经验描述
+- STAR法则应用
+- 常见问题应对
+
+[查看行为面试指南 →](./行为面试/)
+
+## 🎯 使用建议
+
+### 1. 按模块学习
+根据面试岗位选择对应模块：
+- **前端岗位**：前端面试题 + 算法面试题
+- **后端岗位**：后端面试题 + 算法面试题 + 系统设计
+- **全栈岗位**：前端 + 后端 + 算法 + 系统设计
+
+### 2. 理解原理
+- ❌ 不要死记硬背答案
+- ✅ 理解背后的原理
+- ✅ 能够举一反三
+- ✅ 用自己的话解释
+
+### 3. 动手实践
+- 所有代码题都要自己实现一遍
+- 在LeetCode上刷题验证
+- 总结常见题型和解题模板
+
+### 4. 总结归纳
+- 整理自己的答题模板
+- 记录易错点和注意事项
+- 定期复习巩固
+
+## 📊 难度分布
+
+### 前端面试题
+- 🟢 简单：30% - 基础概念
+- 🟡 中等：50% - 常见面试题
+- 🔴 困难：20% - 高级题目
+
+### 算法面试题
+- 🟢 简单：35% - 基础算法
+- 🟡 中等：50% - 中等难度
+- 🔴 困难：15% - 困难题目
+
+### 系统设计面试题
+- 🟡 中等：60% - 常见系统
+- 🔴 困难：40% - 大规模系统
+
+## 💡 答题技巧
+
+### STAR法则
+适用于项目经验和行为面试：
+- **S**ituation：情境 - 描述背景
+- **T**ask：任务 - 说明目标
+- **A**ction：行动 - 讲述过程
+- **R**esult：结果 - 展示成果
+
+### 技术问题答题框架
+1. **先总后分**：先给出核心答案，再展开细节
+2. **举例说明**：用实际项目经验支撑答案
+3. **对比分析**：对比不同方案的优缺点
+4. **双向沟通**：适当提问，展现思考能力
+
+### 算法题解题步骤
+1. **理解题意**：确认输入输出，询问边界条件
+2. **分析思路**：说出解题思路，不要直接写代码
+3. **编写代码**：边写边解释，注意代码规范
+4. **测试验证**：用测试用例验证，考虑边界情况
+5. **优化分析**：分析时间空间复杂度，讨论优化方案
+
+## 📖 学习路径
+
+### 准备初期（1-2周）
+```
+JavaScript基础面试题
+  → 算法基础（数组、字符串）
+  → 项目经验整理
+```
+
+### 准备中期（2-4周）
+```
+框架面试题（React/Vue）
+  → 算法进阶（链表、树）
+  → 系统设计基础
+```
+
+### 准备后期（1-2周）
+```
+高频题目复习
+  → 模拟面试
+  → 查漏补缺
+```
+
+## 🔗 相关资源
+
+### 知识巩固
+- [前端开发](../01-前端开发/) - 前端知识体系
+- [后端开发](../02-后端开发/) - 后端知识体系
+- [数据库](../03-数据库/) - 数据库知识
+- [算法与数据结构](../09-算法与数据结构/) - 算法基础
+
+### 项目经验
+- [实战项目](../10-实战项目/) - 完整项目实战
+- [系统设计](../06-系统设计/) - 系统设计案例
+
+## 📈 面试准备清单
+
+### 技术准备
+- [ ] 基础知识复习
+- [ ] 框架原理理解
+- [ ] 算法题刷题（100+）
+- [ ] 系统设计学习
+- [ ] 项目经验整理
+
+### 简历准备
+- [ ] 项目经历优化
+- [ ] 技术栈梳理
+- [ ] 亮点提炼
+- [ ] 简历排版
+
+### 面试技巧
+- [ ] 自我介绍准备
+- [ ] 常见问题应对
+- [ ] 模拟面试练习
+- [ ] 心态调整
+
+## 🎓 面试流程
+
+### 一面（技术面）
+- 自我介绍
+- 基础知识考察
+- 算法题（1-2道）
+- 项目经验讨论
+
+### 二面（技术深度）
+- 深入技术问题
+- 系统设计题
+- 项目难点讨论
+- 技术视野考察
+
+### 三面（综合面）
+- 技术广度
+- 团队协作
+- 学习能力
+- 职业规划
+
+### HR面
+- 薪资期望
+- 离职原因
+- 入职时间
+- 其他问题
+
+## 💪 备考建议
+
+1. **提前准备**：至少提前1-2个月开始准备
+2. **系统学习**：按模块系统学习，不要东一榔头西一棒
+3. **多做题**：算法题至少刷100+道
+4. **模拟面试**：找朋友或使用在线平台模拟
+5. **总结复盘**：每次面试后总结经验教训
+6. **保持自信**：相信自己，展现最好的状态
+
+祝你面试顺利，拿到心仪的offer！🎉
